objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AccountRelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products (Account)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Model_Name__c</fullName>
        <description>Name as it appears on assets integrated from GP</description>
        <label>Asset Model Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_in_Field_Service_Mobile_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available in Field Service Mobile Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Turnaround_Time__c</fullName>
        <label>Average Turnaround Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carousel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carousel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Critical_Part__c</fullName>
        <inlineHelpText>Drives whether or not an RMA is expected for products of this type.</inlineHelpText>
        <label>Critical Part</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical Part</fullName>
                </value>
                <value>
                    <fullName>Non-Critical Part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Item_Id__c</fullName>
        <externalId>true</externalId>
        <label>GP Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_End_Product__c</fullName>
        <label>High End Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_In_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Essentials_Department__c</fullName>
        <label>Job Essentials Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Accounting/Fleet</fullName>
                </value>
                <value>
                    <fullName>Parts/Service</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <label>Lead Time</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Cost_Share_Amount__c</fullName>
        <label>Location Cost Share Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Machine_In_Service_Cards__c</fullName>
        <label>Machine In Service Cards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Year__c</fullName>
        <label>Manufacturer Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to the Account - Record Type: Manufacturer</description>
        <inlineHelpText>The Manufacturer Associated with the Product (An Account of record type Manufacturer)</inlineHelpText>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Product selected must be an account with a record type of Manufacturer.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Manufacturer</value>
            </filterItems>
            <infoMessage>Product selected must be an account with a record type of Manufacturer.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Product_Type__c</fullName>
        <label>Marketing Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Standard Custom Size</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Co-Op</fullName>
                </value>
                <value>
                    <fullName>Promotions</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing</fullName>
                </value>
                <value>
                    <fullName>Accel Entertainment (Office Use Only)</fullName>
                </value>
                <value>
                    <fullName>Customized</fullName>
                </value>
                <value>
                    <fullName>Sweepstakes</fullName>
                </value>
                <value>
                    <fullName>AE Player TV</fullName>
                </value>
                <value>
                    <fullName>Brand Ambassador Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Request_Maximum__c</fullName>
        <label>Marketing Request Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Request_Type__c</fullName>
        <formula>IF(AND(ISPICKVAL(Marketing_Product_Type__c,&quot;Standard&quot;),CONTAINS(Name,&quot;VIP&quot;)),&quot;VIP&quot;,
 TEXT(Marketing_Product_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Unique Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>Product Nickname added during the inventory request project.</description>
        <inlineHelpText>Product Nickname added during the inventory request project.</inlineHelpText>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Logo__c</fullName>
        <label>Operator Logo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accel Entertainment</fullName>
                </value>
                <value>
                    <fullName>Abraham Gaming</fullName>
                </value>
                <value>
                    <fullName>Fair Share Gaming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outdoor_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outdoor Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Rank__c</fullName>
        <label>Performance Rank</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Location__c</fullName>
        <label>Pickup Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Burr Ridge</fullName>
                </value>
                <value>
                    <fullName>Champaign</fullName>
                </value>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>LaSalle</fullName>
                </value>
                <value>
                    <fullName>Peoria</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <label>Product Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Products_RelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Products</label>
        <referenceTo>Marketing_Request__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Category__c</fullName>
        <label>Promo Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Made</fullName>
                </value>
                <value>
                    <fullName>Signage</fullName>
                </value>
                <value>
                    <fullName>Patron Giveaway Items</fullName>
                </value>
                <value>
                    <fullName>Sales Slick</fullName>
                </value>
                <value>
                    <fullName>Rewards</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Item_Type__c</fullName>
        <label>Promo Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Share</fullName>
                </value>
                <value>
                    <fullName>Co-Op Reimbursement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_in_Stock__c</fullName>
        <label>Quantity in Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Text__c</fullName>
        <description>Spring 2020 bug workaround. Lookup filters don&apos;t seem to actually filter the search results on record type on product!</description>
        <inlineHelpText>Spring 2020 bug workaround. Lookup filters don&apos;t seem to actually filter the search results on record type on product!</inlineHelpText>
        <label>Record Type Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sci_Games_Name__c</fullName>
        <label>Sci Games Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Products (Site)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Slant_Top__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Slant Top</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specs__c</fullName>
        <label>Specs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Active&quot;</defaultValue>
        <description>Active denotes that we are actively buying more of this product. Inactive denotes that are out there but we are not actively buying more of this product. Revoked denotes that this product is revoked and should not be on an Asset.</description>
        <inlineHelpText>Active denotes that we are actively buying more of this product. Inactive denotes that are out there but we are not actively buying more of this product. Revoked denotes that this product is revoked and should not be on an Asset.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thirty_Day_Location_Share_Avg__c</fullName>
        <defaultValue>0</defaultValue>
        <label>30 Day Location Share Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Thirty_Day_Location_Share_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>30 Day Location Share Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Thirty_Day_Revenue_Avg__c</fullName>
        <defaultValue>0</defaultValue>
        <label>30 Day Revenue Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Thirty_Day_Revenue_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>30 Day Revenue Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Standard_Items__c</fullName>
        <label>Total Cost (Standard Items)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Description__c</fullName>
        <label>Vendor Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products (Vendor ID)</relationshipLabel>
        <relationshipName>Products3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Item__c</fullName>
        <label>Vendor Item</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Marketing_Product_Type__c</columns>
        <columns>Marketing_Request_Maximum__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Created_By__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>GP_Item_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_IT_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Marketing_Product_Type__c</columns>
        <columns>Marketing_Request_Maximum__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Created_By__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>GP_Item_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Essentials_Department__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>All IT Products</label>
    </listViews>
    <listViews>
        <fullName>Gaming_Software_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>Manufacturer__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Status__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Gaming_Software</value>
        </filters>
        <label>Gaming Software Products</label>
    </listViews>
    <listViews>
        <fullName>Marketing_List</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>Manufacturer__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Status__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Marketing</value>
        </filters>
        <label>Marketing List</label>
    </listViews>
    <listViews>
        <fullName>Products_With_Asset_Model_Name</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Asset_Model_Name__c</columns>
        <columns>Thirty_Day_Location_Share_Total__c</columns>
        <columns>Thirty_Day_Location_Share_Avg__c</columns>
        <columns>Thirty_Day_Revenue_Total__c</columns>
        <columns>Thirty_Day_Revenue_Avg__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>GP_Item_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>ASSET</value>
        </filters>
        <filters>
            <field>Asset_Model_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Products With Asset Model Name</label>
    </listViews>
    <recordTypes>
        <fullName>Gaming_Software</fullName>
        <active>true</active>
        <label>Gaming Software</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing</fullName>
        <active>true</active>
        <label>Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Products</fullName>
        <active>true</active>
        <label>Products</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Critical_Part_Available_in_FSM</fullName>
        <active>true</active>
        <description>This Validation Rule requires the user to fill out the Critical Part field if Available in Field Service Mobile Flow is checked.</description>
        <errorConditionFormula>AND(
ISBLANK(TEXT(Critical_Part__c)),
Available_in_Field_Service_Mobile_Flow__c = TRUE)</errorConditionFormula>
        <errorMessage>Please populate the Critical Part field to indicate whether or not an RMA is expected for this item.</errorMessage>
    </validationRules>
</CustomObject>